apps/dev/karakeep/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: karakeep
  namespace: karakeep
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`karakeep.stadthagen.dev`)
      kind: Rule
      services:
        - name: karakeep
          port: 3000
  tls:
    secretName: karakeep-tls
